[gd_scene load_steps=2 format=3 uid="uid://but0grmoqdipt"]

[ext_resource type="Script" path="res://scripts/Menu.gd" id="1_jx772"]

[node name="Menu" type="Control"]
custom_minimum_size = Vector2(1150, 0)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -576.0
offset_top = -324.0
offset_right = 574.0
offset_bottom = -324.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jx772")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -54850.0
offset_top = -23680.0
offset_right = 60150.0
offset_bottom = 41320.0
color = Color(0, 0.521569, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 200.0
offset_bottom = 336.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play 1"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Play 2"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Load"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxContainer/Load" to="." method="_on_load_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
